[tool.poetry]
name = "influx-snmp-agent"
version = "0.1.0"
description = ""
authors = ["Ken Levasseur <klevasseuriv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
influxdb-client = "^1.27.0"
easysnmp = "^0.2.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
pytest = "^7.1.1"

[tool.poetry.scripts]
influx-snmp-agent = 'influx_snmp_agent.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
